# longterm-investment

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_cn.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
marketflow/: __init__.py  app_setup.py  backtesting.py  config.py  constants.py  database.py  error_handling.py  market_data.py  market_fear.py  market_schedule.py  monitoring.py  notification.py  ratio_calculator.py  risk_management.py  strategy.py
scripts/: dev.sh  run.sh
